[gd_scene load_steps=19 format=3 uid="uid://buaxa1e4r3acr"]

[ext_resource type="Script" uid="uid://nm3isiecl653" path="res://GameManager.gd" id="1_fdnlq"]
[ext_resource type="Script" uid="uid://b6f1a7f2hl2ph" path="res://BattleScripts/Enemy.gd" id="1_ynf5e"]
[ext_resource type="Resource" uid="uid://b0eo5o5prbknw" path="res://EnemyResources/Area1/Slime.tres" id="2_hptm8"]
[ext_resource type="Script" uid="uid://dc7i46jgap15l" path="res://BattleScripts/BattleScreen.gd" id="2_jkdf5"]
[ext_resource type="Texture2D" uid="uid://se58d3jod74n" path="res://Art/Platform.png" id="3_d1ilt"]
[ext_resource type="Script" uid="uid://cw7mpoyqw3ffv" path="res://BattleScripts/Party.gd" id="4_6iyac"]
[ext_resource type="Script" uid="uid://csh41j288kh7x" path="res://BattleScripts/Character.gd" id="5_fdnlq"]
[ext_resource type="PackedScene" uid="uid://newaainqw8gd" path="res://health_panel.tscn" id="5_jkdf5"]
[ext_resource type="Script" uid="uid://ceoe4jcaf0qpx" path="res://TownScripts/Town.gd" id="10_6iyac"]
[ext_resource type="Script" uid="uid://ddv1quvbqp0fj" path="res://TownScripts/ChooseEnemyButton.gd" id="10_d1ilt"]
[ext_resource type="Resource" uid="uid://b1n0o8gbb2ykj" path="res://EnemyResources/Area1/Goblin.tres" id="11_6iyac"]
[ext_resource type="Resource" uid="uid://da0q48xgx8ww3" path="res://EnemyResources/Area1/GoblinWarrior.tres" id="11_b3802"]
[ext_resource type="PackedScene" uid="uid://cc53pjl56ehqh" path="res://Scenes/tavern.tscn" id="19_fevyy"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_b3802"]
bg_color = Color(0.419608, 0.188235, 0, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jkdf5"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wsu2k"]
bg_color = Color(0.693336, 0.73321, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ee4r6"]
bg_color = Color(0.427451, 0.662745, 0.505882, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ynf5e"]
bg_color = Color(0.827002, 0.819455, 0.823781, 1)

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fdnlq")

[node name="Battle" type="Control" parent="." node_paths=PackedStringArray("town")]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("2_jkdf5")
town = NodePath("../Town")

[node name="Enemy" type="Panel" parent="Battle" node_paths=PackedStringArray("nameLabel", "playerParty", "attackTimer", "respawnProgress", "enemyTexture", "respawnTimer", "health")]
layout_mode = 0
offset_left = 797.0
offset_top = 195.0
offset_right = 988.0
offset_bottom = 410.0
theme_override_styles/panel = SubResource("StyleBoxFlat_b3802")
script = ExtResource("1_ynf5e")
nameLabel = NodePath("nameLabel")
playerParty = NodePath("../Party")
enemyType = ExtResource("2_hptm8")
attackTimer = NodePath("AttackTimer")
respawnProgress = NodePath("RespawnBar")
enemyTexture = NodePath("Character")
respawnTimer = NodePath("RespawnTimer")
health = NodePath("HealthPanel")

[node name="HealthPanel" parent="Battle/Enemy" instance=ExtResource("5_jkdf5")]
layout_mode = 0
offset_left = -34.0
offset_top = 261.0
offset_right = 224.0
offset_bottom = 283.0

[node name="nameLabel" type="Label" parent="Battle/Enemy"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 15
text = "name
"

[node name="AttackTimer" type="Timer" parent="Battle/Enemy"]

[node name="Platform" type="Sprite2D" parent="Battle/Enemy"]
texture_filter = 3
position = Vector2(94, 149)
scale = Vector2(5, 3.596)
texture = ExtResource("3_d1ilt")

[node name="Character" type="Sprite2D" parent="Battle/Enemy"]
texture_filter = 3
position = Vector2(94, 128)
scale = Vector2(4, 4.627)

[node name="RespawnBar" type="ProgressBar" parent="Battle/Enemy"]
layout_mode = 0
offset_left = 3.0
offset_top = 240.0
offset_right = 195.0
offset_bottom = 254.0
theme_override_styles/background = SubResource("StyleBoxFlat_jkdf5")
theme_override_styles/fill = SubResource("StyleBoxFlat_wsu2k")
max_value = 1.0
value = 0.5
show_percentage = false

[node name="RespawnTimer" type="Timer" parent="Battle/Enemy"]
one_shot = true

[node name="Party" type="Panel" parent="Battle" node_paths=PackedStringArray("Character1", "Character2", "Character3", "Character4", "enemy", "health")]
layout_mode = 0
offset_left = 160.0
offset_top = 139.0
offset_right = 563.0
offset_bottom = 483.0
script = ExtResource("4_6iyac")
Character1 = NodePath("Player1")
Character2 = NodePath("Player2")
Character3 = NodePath("Player3")
Character4 = NodePath("Player4")
enemy = NodePath("../Enemy")
health = NodePath("HealthPanel")

[node name="Player1" type="Panel" parent="Battle/Party" node_paths=PackedStringArray("attackTimer", "party", "nameLabel", "attackProgBar")]
layout_mode = 0
offset_left = 240.0
offset_top = 26.0
offset_right = 381.0
offset_bottom = 144.0
theme_override_styles/panel = SubResource("StyleBoxFlat_ee4r6")
script = ExtResource("5_fdnlq")
attackTimer = NodePath("CharacterAttackTimer")
party = NodePath("..")
nameLabel = NodePath("Name")
attackProgBar = NodePath("ProgressBar")

[node name="CharacterAttackTimer" type="Timer" parent="Battle/Party/Player1"]

[node name="Name" type="Label" parent="Battle/Party/Player1"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="Platform" type="Sprite2D" parent="Battle/Party/Player1"]
texture_filter = 3
position = Vector2(69, 73)
scale = Vector2(5, 3.596)
texture = ExtResource("3_d1ilt")

[node name="Character" type="Sprite2D" parent="Battle/Party/Player1"]
texture_filter = 3
position = Vector2(69, 27)
scale = Vector2(4, 4.627)

[node name="ProgressBar" type="ProgressBar" parent="Battle/Party/Player1"]
layout_mode = 0
offset_left = -2.0
offset_top = 128.0
offset_right = 148.0
offset_bottom = 135.0
show_percentage = false

[node name="Player2" type="Panel" parent="Battle/Party" node_paths=PackedStringArray("attackTimer", "party", "nameLabel", "attackProgBar")]
layout_mode = 0
offset_left = 213.0
offset_top = 163.0
offset_right = 354.0
offset_bottom = 281.0
theme_override_styles/panel = SubResource("StyleBoxFlat_ee4r6")
script = ExtResource("5_fdnlq")
attackTimer = NodePath("CharacterAttackTimer")
party = NodePath("..")
nameLabel = NodePath("Name")
attackProgBar = NodePath("ProgressBar")

[node name="CharacterAttackTimer" type="Timer" parent="Battle/Party/Player2"]

[node name="Name" type="Label" parent="Battle/Party/Player2"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="Platform" type="Sprite2D" parent="Battle/Party/Player2"]
texture_filter = 3
position = Vector2(69, 73)
scale = Vector2(5, 3.596)
texture = ExtResource("3_d1ilt")

[node name="Character" type="Sprite2D" parent="Battle/Party/Player2"]
texture_filter = 3
position = Vector2(69, 27)
scale = Vector2(4, 4.627)

[node name="ProgressBar" type="ProgressBar" parent="Battle/Party/Player2"]
layout_mode = 0
offset_left = -2.0
offset_top = 128.0
offset_right = 148.0
offset_bottom = 135.0
show_percentage = false

[node name="Player3" type="Panel" parent="Battle/Party" node_paths=PackedStringArray("attackTimer", "party", "nameLabel", "attackProgBar")]
layout_mode = 0
offset_left = 44.0
offset_top = 28.0
offset_right = 185.0
offset_bottom = 146.0
theme_override_styles/panel = SubResource("StyleBoxFlat_ee4r6")
script = ExtResource("5_fdnlq")
attackTimer = NodePath("CharacterAttackTimer")
party = NodePath("..")
nameLabel = NodePath("Name")
attackProgBar = NodePath("ProgressBar")

[node name="CharacterAttackTimer" type="Timer" parent="Battle/Party/Player3"]

[node name="Name" type="Label" parent="Battle/Party/Player3"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="Platform" type="Sprite2D" parent="Battle/Party/Player3"]
texture_filter = 3
position = Vector2(69, 73)
scale = Vector2(5, 3.596)
texture = ExtResource("3_d1ilt")

[node name="Character" type="Sprite2D" parent="Battle/Party/Player3"]
texture_filter = 3
position = Vector2(69, 27)
scale = Vector2(4, 4.627)

[node name="ProgressBar" type="ProgressBar" parent="Battle/Party/Player3"]
layout_mode = 0
offset_left = -2.0
offset_top = 128.0
offset_right = 148.0
offset_bottom = 135.0
show_percentage = false

[node name="Player4" type="Panel" parent="Battle/Party" node_paths=PackedStringArray("attackTimer", "party", "nameLabel", "attackProgBar")]
layout_mode = 0
offset_left = 23.0
offset_top = 163.0
offset_right = 164.0
offset_bottom = 281.0
theme_override_styles/panel = SubResource("StyleBoxFlat_ee4r6")
script = ExtResource("5_fdnlq")
attackTimer = NodePath("CharacterAttackTimer")
party = NodePath("..")
nameLabel = NodePath("Name")
attackProgBar = NodePath("ProgressBar")

[node name="CharacterAttackTimer" type="Timer" parent="Battle/Party/Player4"]

[node name="Name" type="Label" parent="Battle/Party/Player4"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="Platform" type="Sprite2D" parent="Battle/Party/Player4"]
texture_filter = 3
position = Vector2(69, 73)
scale = Vector2(5, 3.596)
texture = ExtResource("3_d1ilt")

[node name="Character" type="Sprite2D" parent="Battle/Party/Player4"]
texture_filter = 3
position = Vector2(69, 27)
scale = Vector2(4, 4.627)

[node name="ProgressBar" type="ProgressBar" parent="Battle/Party/Player4"]
layout_mode = 0
offset_left = -2.0
offset_top = 128.0
offset_right = 148.0
offset_bottom = 135.0
show_percentage = false

[node name="HealthPanel" parent="Battle/Party" instance=ExtResource("5_jkdf5")]
layout_mode = 0
offset_left = 0.0
offset_top = 0.0
offset_right = 258.0
offset_bottom = 22.0

[node name="GotoTownbutton" type="Button" parent="Battle"]
layout_mode = 0
offset_left = 9.0
offset_top = 9.0
offset_right = 118.0
offset_bottom = 55.0

[node name="Label" type="Label" parent="Battle/GotoTownbutton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Goto Town
<------"

[node name="Town" type="Panel" parent="." node_paths=PackedStringArray("battle", "tavern")]
visible = false
layout_mode = 0
offset_left = -2.0
offset_top = 1.0
offset_right = 1150.0
offset_bottom = 650.0
theme_override_styles/panel = SubResource("StyleBoxFlat_ynf5e")
script = ExtResource("10_6iyac")
battle = NodePath("../Battle")
tavern = NodePath("Tavern")

[node name="MonsterSelectionOpen" type="Button" parent="Town"]
layout_mode = 0
offset_left = 973.0
offset_top = 171.0
offset_right = 1059.0
offset_bottom = 206.0
text = "Monsters"

[node name="MonsterSelectionMenu" type="Panel" parent="Town"]
visible = false
layout_mode = 0
offset_left = 960.0
offset_top = 167.0
offset_right = 1085.0
offset_bottom = 516.0

[node name="VBoxContainer" type="VBoxContainer" parent="Town/MonsterSelectionMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -60.5
offset_top = -133.5
offset_right = 61.5
offset_bottom = 172.5
grow_horizontal = 2
grow_vertical = 2

[node name="Slime" type="Button" parent="Town/MonsterSelectionMenu/VBoxContainer" groups=["MonsterSelectButtons"]]
layout_mode = 2
script = ExtResource("10_d1ilt")
enemy = ExtResource("2_hptm8")

[node name="GOblin" type="Button" parent="Town/MonsterSelectionMenu/VBoxContainer" groups=["MonsterSelectButtons"]]
layout_mode = 2
script = ExtResource("10_d1ilt")
enemy = ExtResource("11_6iyac")

[node name="GoblinWar" type="Button" parent="Town/MonsterSelectionMenu/VBoxContainer" groups=["MonsterSelectButtons"]]
layout_mode = 2
script = ExtResource("10_d1ilt")
enemy = ExtResource("11_b3802")

[node name="MonsterSelectionClose" type="Button" parent="Town/MonsterSelectionMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -47.5
offset_top = -170.5
offset_right = 38.5
offset_bottom = -135.5
grow_horizontal = 2
grow_vertical = 2
text = "Close"

[node name="GotoCombat" type="Button" parent="Town"]
layout_mode = 0
offset_left = 978.0
offset_top = 134.0
offset_right = 1054.0
offset_bottom = 165.0
text = "Combat"

[node name="OpenTavern" type="Button" parent="Town"]
layout_mode = 0
offset_left = 197.0
offset_top = 424.0
offset_right = 301.0
offset_bottom = 455.0
text = "OpenTavern
"

[node name="Tavern" parent="Town" instance=ExtResource("19_fevyy")]
visible = false
layout_mode = 1

[connection signal="enemy_died" from="Battle/Enemy" to="." method="_on_enemy_enemy_died"]
[connection signal="enemy_died" from="Battle/Enemy" to="Town" method="_on_enemy_enemy_died"]
[connection signal="died" from="Battle/Enemy/HealthPanel" to="Battle/Enemy" method="_on_health_panel_died"]
[connection signal="timeout" from="Battle/Enemy/AttackTimer" to="Battle/Enemy" method="_on_attackTimer_timeout"]
[connection signal="timeout" from="Battle/Enemy/RespawnTimer" to="Battle/Enemy" method="enemy_respawn"]
[connection signal="timeout" from="Battle/Party/Player1/CharacterAttackTimer" to="Battle/Party/Player1" method="_on_character_attack_timer_timeout"]
[connection signal="timeout" from="Battle/Party/Player2/CharacterAttackTimer" to="Battle/Party/Player2" method="_on_character_attack_timer_timeout"]
[connection signal="timeout" from="Battle/Party/Player3/CharacterAttackTimer" to="Battle/Party/Player3" method="_on_character_attack_timer_timeout"]
[connection signal="timeout" from="Battle/Party/Player4/CharacterAttackTimer" to="Battle/Party/Player4" method="_on_character_attack_timer_timeout"]
[connection signal="died" from="Battle/Party/HealthPanel" to="Battle/Party" method="_on_health_panel_died"]
[connection signal="button_down" from="Battle/GotoTownbutton" to="Battle" method="_on_goto_townbutton_button_down"]
[connection signal="button_down" from="Town/MonsterSelectionOpen" to="Town" method="_on_monster_selection_button_pressed"]
[connection signal="button_down" from="Town/MonsterSelectionMenu/VBoxContainer/Slime" to="Town/MonsterSelectionMenu/VBoxContainer/Slime" method="_on_button_down"]
[connection signal="button_down" from="Town/MonsterSelectionMenu/VBoxContainer/GOblin" to="Town/MonsterSelectionMenu/VBoxContainer/GOblin" method="_on_button_down"]
[connection signal="button_down" from="Town/MonsterSelectionMenu/VBoxContainer/GoblinWar" to="Town/MonsterSelectionMenu/VBoxContainer/GoblinWar" method="_on_button_down"]
[connection signal="button_down" from="Town/MonsterSelectionMenu/MonsterSelectionClose" to="Town" method="_on_close_menu_button_pressed"]
[connection signal="button_down" from="Town/GotoCombat" to="Town" method="_on_goto_combat_button_down"]
[connection signal="button_down" from="Town/OpenTavern" to="Town" method="_on_open_tavern_button_down"]
[connection signal="PartyChanged" from="Town/Tavern" to="Battle/Party" method="_on_tavern_party_changed"]
